--- a/functions/templates/index.html
+++ b/functions/templates/index.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %}
 <!-- [코드 작성] static 불러오기 -->
-
+{% load static %}
 
 {% block head %}
   <!-- [코드 작성] 이미지의 너비를 200px로 만들기 -->
   <style>
-    
+    img {
+      width : 300px;
+    }
   </style>
 {% endblock %}
 
@@ -13,6 +15,6 @@
   <h1>메인 페이지</h1>
 
   <!-- [코드 작성] 메인 페이지에 이미지 넣기 (다른 이미지를 사용하고 싶다면 static의 image 폴더에 이미지 넣어주기) -->
-  <img src="" alt="">
+  <img src="{% static 'image/walnut.jpg' %}" alt="">
   
 {% endblock %}
